fix aligning issue

--- a/components/about/styles.module.scss
+++ b/components/about/styles.module.scss
@@ -2,12 +2,12 @@
   width: 50vw;
   margin: 3rem auto;
   h1 {
-    font-size: 3rem;
+    font-size: 4.3rem;
     margin-bottom: 1.5rem;
     color: #ff6f59;
   }
   p {
-    font-size: 2rem;
+    font-size: 1.7rem;
     margin-bottom: 2rem;
     line-height: 3rem;
     text-align: left;
