--- a/components/work/styles.module.scss
+++ b/components/work/styles.module.scss
@@ -6,6 +6,7 @@
   font-size: 4.3rem;
   margin: 4rem 0 4rem 0;
   text-align: center;
+  color: #ff6f59;
 }
 
 .project {
@@ -34,8 +35,7 @@
     font-size: 1.6rem;
     line-height: 2.5rem;
     word-spacing: 1px;
-    text-align: justify;
-    height: 21rem;
+    height: 22rem;
   }
 
   ul {
