--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -20,7 +20,6 @@
     line-height: 3rem;
     font-family: Arial, Helvetica, sans-serif;
     letter-spacing: 1px;
-    text-align: justify;
   }
   span {
     color: #ff6f59;
